--- a/src/public/global.css
+++ b/src/public/global.css
@@ -572,6 +572,11 @@ a.btn.btn-float-right:hover {
 	text-shadow: 0px 2px rgba(255, 190, 125, 0.25);
 }
 
+a.btn.btn-sidebar {
+	min-width: 0px;
+	width: 80%;
+}
+
 @media screen and (max-width: 1400px){
 	.page.view-story > a.btn, .page.story-history > a.btn {
 		display: block;
@@ -581,11 +586,60 @@ a.btn.btn-float-right:hover {
 		margin-right: auto;
 	}
 
+	.page.view-story > h3 {
+		font-size: 28px;
+	}
+
+	.page.view-story > h5 {
+		font-size: 18px;
+	}
+
+	.page.view-story > h6 {
+		font-size: 14px;
+	}
+
+	.page.view-story > p {
+		font-size: 24px;
+		line-height: 32px;
+	}
+
 	.world-choice {
 		padding: 10px 25px;
 	}
 
 	.hire-employee.info > a.btn {
 		margin-top: 5px !important;
+	}
+
+	#sidebar .logo > h1 {
+		font-size: 28px;
+		vertical-align: bottom;
+		line-height: 50px;
+	}
+
+	#sidebar {
+		width: 20%;
+	}
+
+	#content {
+		width: 80vw;
+	}
+
+	.spacer h1 {
+		font-size: 24px;
+	}
+
+	.spacer h2 {
+		font-size: 18px;
+	}
+
+	.spacer > ul {
+		list-style: none;
+		padding-left: 20px;
+		margin-top: 5px;
+	}
+
+	.page.view-story {
+		width: 80%;
 	}
 }
