--- a/src/templates/dashboard.hbs
+++ b/src/templates/dashboard.hbs
@@ -50,9 +50,7 @@
             <table>
             <tr>
             <td class="icon">
-                <div class="icon">
-
-                </div>
+                <img {{bind-attr src="employee.avatar"}} class='icon' />
             </td>
             <td class="name">
                 <h5>{{employee.name}}{{#if employee.busy}} (Busy){{/if}}</h5>
