--- a/src/templates/hire.hbs
+++ b/src/templates/hire.hbs
@@ -6,8 +6,7 @@
     <table>
         <tr>
             <td class="hire-employee icon">
-                <div class="icon">
-                </div>
+                <img {{bind-attr src="employee.avatar"}} class='icon' />
             </td>
             <td class="hire-employee info">
                 <div><strong>Name:</strong> {{employee.name}}</div>
