--- a/src/templates/viewStory.hbs
+++ b/src/templates/viewStory.hbs
@@ -9,6 +9,9 @@
 
 	<p>{{model.synopsis}}</p>
 
+	<h4>Critic Rating:</h4>
+	<h3 class="rating">{{model.criticRating}}</h3>
+
 
 	{{#link-to 'history' class="btn"}}
 	    &laquo;&nbsp;Back to History
