--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -1,3 +1,9 @@
+<div class="page intro">
 <p>Hello and welcome to Crossover, the game where fanfiction is a fine art, and you are Picasso.</p>
 
-<p>{{#link-to 'dashboard'}}Cool, I think I got it. Let's connect some worlds.{{/link-to}}</p>
+<p>You are a starving artist with the lifelong dream of running a Crossover fanfiction empire! To start, you'll create stories on your own and generate pageviews for your website, which has ads that generate income for you. Over time, you'll hire your first employee, move to an actual office and get hordes of followers!</p>
+
+<p>Don't let your finances run out or you'll lose the game! Let's see what sort of <del>frightening</del> elegant art you can come up with!</p>
+
+<p>{{#link-to 'dashboard' class="btn btn-xlarge"}}Let's Connect Some Worlds!{{/link-to}}</p>
+</div>
